code commit @Rahul
designing nad development of mrn master

--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -112,6 +112,8 @@
 						<ul class="treeview-menu">
 
 							<li><a th:href="@{/itemopening/}"><i class="fa fa-circle-o"></i> Item-Opening</a></li>
+							<li><a th:href="@{/gateentry/}"><i class="fa fa-circle-o"></i> Gate Entry</a></li>
+							<li><a th:href="@{/mrm/}"><i class="fa fa-circle-o"></i> Material Receipt Master</a></li>
 							
 
 
