code commit@Rahul
designing and development of mrn form

--- a/src/main/resources/templates/layouts/Master/gateEntry.html
+++ b/src/main/resources/templates/layouts/Master/gateEntry.html
@@ -288,7 +288,7 @@
 																		<td><select
 																			class="form-control indentContainer form-control-sm select"
 																			id="orderIndentNumberPo"
-																			name="gateEntryItemDetails[0].openIndent"
+																			name="gateEntryItemDetails[0].purchaseOrder"
 																			title="indent number"
 																			onchange='getOrderIndentDetailPo()' required>
 																				<option value="">Select Indent</option>
