--- a/src/main/resources/templates/layouts/Master/mrn.html
+++ b/src/main/resources/templates/layouts/Master/mrn.html
@@ -38,6 +38,11 @@
 	width: 130px;
 	font-size: 10px;
 }
+
+iframe {
+	display: block;
+	width: 100%;
+}
 </style>
 
 </head>
@@ -141,8 +146,8 @@
 														<div class="form-group col-md-3">
 															<label class="form-label">Supplier Code</label> <label
 																style="color: red">*</label> <select
-																class="form-control" id="mrnSupplierCode" title="supplier code"
-																th:field="*{supplierMaster}">
+																class="form-control" id="mrnSupplierCode"
+																title="supplier code" th:field="*{supplierMaster}">
 																<option value="">Select</option>
 																<option th:each="supplier :  ${supplierList}"
 																	th:text="${supplier.supplierName}"
@@ -203,8 +208,8 @@
 
 														<div class="form-group col-md-3">
 															<label class="form-label">Currency Code</label> <select
-																class="form-control" id="mrnCurrencyCode" title="gst type"
-																th:field="*{currency}">
+																class="form-control" id="mrnCurrencyCode"
+																title="gst type" th:field="*{currency}">
 																<option value="" selected>select</option>
 																<option th:each="currency :  ${currencyList}"
 																	th:text="${currency.currencyValue}"
@@ -341,12 +346,11 @@
 																			class="form-control indentContainer form-control-sm select"
 																			id="orderIndentNumberPo"
 																			name="mrnDetails[0].matServType"
-																			title="indent number"
-																			>
+																			title="indent number">
 																				<option value="">Select</option>
 																				<option value="m">M</option>
 																				<option value="s">S</option>
-																				
+
 
 																		</select></td>
 																		<!-- item code -->
@@ -358,39 +362,35 @@
 																		<!-- item name -->
 																		<td><input type="text"
 																			class="form-control form-control-sm"
-																			id="orderIndentDatePo" title="item name"
-																			></td>
+																			id="orderIndentDatePo" title="item name"></td>
 																		<!-- Account Name -->
 																		<td><select
 																			class="form-control indentContainer form-control-sm select"
 																			id="orderIndentNumberPo"
-																			name="mrnDetails[0].itemAccCode"
-																			title="account name"
-																			>
+																			name="mrnDetails[0].itemAccCode" title="account name">
 																				<option value="">Select</option>
 																				<option value="ac-1">Ac01</option>
 																				<option value="ac-2">Ac02</option>
-																				
+
 
 																		</select></td>
 																		<!-- UOM -->
 																		<td><input type="number" title="uom"
-																			class="form-control form-control-sm"
-																			></td>
+																			class="form-control form-control-sm"></td>
 																		<!-- po qty   -->
 																		<td><input type="number"
-																			class="form-control form-control-sm" title="po qty"
-																			></td>
+																			class="form-control form-control-sm" title="po qty"></td>
 																		<!-- inr qty -->
 																		<td><input type="text"
 																			class="form-control form-control-sm"
 																			id="technicalQualification" title="inv qty"
-																			 name="mrnDetails[0].itemInv"></td>
+																			name="mrnDetails[0].itemInv"></td>
 
 																		<!-- rec qty  -->
 																		<td><input type="text"
 																			class="form-control form-control-sm"
-																			id="orderItemuom" title="rec qty" name="mrnDetails[0].itemRec"></td>
+																			id="orderItemuom" title="rec qty"
+																			name="mrnDetails[0].itemRec"></td>
 
 
 																		<!-- po rate curr -->
@@ -402,28 +402,33 @@
 																		<!-- po rate  -->
 																		<td><input type="text"
 																			class="form-control form-control-sm"
-																			id="technicalQualification" title="po rate" name="mrnDetails[0].itemRate"></td>
+																			id="technicalQualification" title="po rate"
+																			name="mrnDetails[0].itemRate"></td>
 
 																		<!-- bill rate  -->
 																		<td><input type="text"
 																			class="form-control form-control-sm"
-																			id="technicalQualification" title="bill rate" name="mrnDetails[0].itemrateOnBill"></td>
+																			id="technicalQualification" title="bill rate"
+																			name="mrnDetails[0].itemrateOnBill"></td>
 
 																		<!-- total cost   -->
 																		<td><input type="text"
 																			class="form-control form-control-sm"
-																			id="technicalQualification" title="total cost" name="mrnDetails[0].totalvalue"></td>
+																			id="technicalQualification" title="total cost"
+																			name="mrnDetails[0].totalvalue"></td>
 
 																		<!-- net cost  -->
 																		<td><input type="text"
 																			class="form-control form-control-sm"
-																			id="technicalQualification" title="net cost" name="mrnDetails[0].itemNetVal"></td>
+																			id="technicalQualification" title="net cost"
+																			name="mrnDetails[0].itemNetVal"></td>
 
 
 																		<!-- total pur cost  -->
 																		<td><input type="text"
 																			class="form-control form-control-sm"
-																			id="technicalQualification" title="total pur cost"name="mrnDetails[0].totalPurCost"></td>
+																			id="technicalQualification" title="total pur cost"
+																			name="mrnDetails[0].totalPurCost"></td>
 
 																		<!-- total inr cost  -->
 																		<td><input type="text"
@@ -433,21 +438,26 @@
 																		<!-- remarks   -->
 																		<td><input type="text"
 																			class="form-control form-control-sm"
-																			id="technicalQualification" title="remarks" name="mrnDetails[0].totalPurCost"></td>
+																			id="technicalQualification" title="remarks"
+																			name="mrnDetails[0].totalPurCost"></td>
 
 																		<!-- dol -->
 																		<td><select
 																			class="form-control indentContainer form-control-sm select"
-																			id="orderIndentNumberPo"
-																			
-																			title="dol"
-																			>
+																			id="orderIndentNumberPo" title="dol">
 																				<option value="">Select</option>
 																				<option value="y">YES</option>
 																				<option value="n">NO</option>
-																				
+
 
 																		</select></td>
+
+																		<td>
+																			<button type="button" class="btn btn-primary"
+																				data-toggle="modal" data-target="#exampleModal">
+																				Tax Info</button>
+																		</td>
+
 
 
 
@@ -502,19 +512,49 @@
 	<div th:replace="fragments/footer :: footer">...</div>
 
 
+
+
+	<!-- modal -->
+
+	<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog"
+		aria-labelledby="exampleModalLabel" aria-hidden="true">
+		<div class="modal-dialog" role="document">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+					<button type="button" class="close" data-dismiss="modal"
+						aria-label="Close">
+						<span aria-hidden="true">&times;</span>
+					</button>
+				</div>
+				<div class="modal-body">
+					<iframe src="www.google.com"></iframe>
+				</div>
+				<div class="modal-footer">
+					<button type="button" class="btn btn-secondary"
+						data-dismiss="modal">Close</button>
+					<button type="button" class="btn btn-primary">Save changes</button>
+				</div>
+			</div>
+		</div>
+	</div>
+
+
+	<!-- end modal   -->
+
+
 	<script>
-		$(document).ready(function() {
+		$(document)
+				.ready(
+						function() {
 
-			document.getElementById('mrnGateEntryDate').valueAsDate = new Date();
+							document.getElementById('mrnGateEntryDate').valueAsDate = new Date();
 
-		});
-		
-		
+						});
 	</script>
 
 
 	<script>
-		
 		
 	</script>
 
@@ -533,6 +573,13 @@
 				console.log("ajax request : " + message);
 			}
 
+		});
+	</script>
+
+
+	<script>
+		$(window).load(function() {
+			$('#exampleModal').modal('show');
 		});
 	</script>
 	<!--   <section class="content">
